# database-security-synchronizer

./: .gitignore  Cargo.toml  README.md  cache-json-checker.py
src/: logger.rs  main.rs
src/database/: database_connection.rs  mod.rs  table_asset.rs  table_filing_assets.rs  table_filing_common_stock_shares_outstanding.rs  table_filing_entity_common_stock_shares_outstanding.rs  table_sec_submission_file_hash.rs  table_security.rs  table_security_exchange.rs  table_security_exchange_ticker.rs  table_security_filing.rs  table_security_filing_common_stock_shares_outstanding.rs  table_security_filing_entity_common_stock_shares_outstanding.rs  table_security_ticker.rs
src/handler/: handler_database_security_synchronizer.rs  handler_security_profile.rs  handler_time.rs  mod.rs
src/handler/api/: handler_api_sec.rs  mod.rs
src/handler/data/: handler_filing_assets.rs  handler_filing_common_stock_shares_outstanding.rs  handler_filing_entity_common_stock_shares_outstanding.rs  handler_sec_submission_file_hash.rs  handler_security.rs  handler_security_exchange_ticker.rs  handler_security_filing.rs  handler_security_filing_common_stock_shares_outstanding.rs  handler_security_filing_entity_common_stock_shares_outstanding.rs  mod.rs
src/handler/file/: handler_cache.rs  handler_cache_submissions_file_with_no_tickers.rs  mod.rs
src/handler/file/zip/: handler_companyfacts_zip.rs  handler_file_companyfacts_zip.rs  handler_file_submissions_zip.rs  handler_submissions_zip.rs  mod.rs
src/schema/: companyfacts.rs  mod.rs  submissions_data.rs
